@@ -2,17 +2,13 @@
 .\" Process with
 .\" nroff -man readfile.3
 .\" 2011-03-16 JoungKyun Kim <htt://oops.org>
-.\" $Id: readfile.3,v 1.2 2011-03-16 11:42:38 oops Exp $
+.\" $Id: readfile.3,v 1.3 2011-03-23 12:19:35 oops Exp $
 .SH 이름
 readfile \- 파일을 읽는다.
-.br
-fileread \- readfile의 alias
 
 .SH 사용법
 .B #include <olibc/libfile.h>
 .sp
-.BI "char * fileread (const char * path);"
-.br
 .BI "char * readfile (const char * path);"
 
 .SH 라이브러리 링크
@@ -41,9 +37,6 @@ or
 파일의 내용을 담은 포인터를 반환한다. 반환된 값은 반드시 메모리
 해제 (free) 를 해 주어야 한다. 파일 읽기를 실패했을 경우, NULL을
 반환한다.
-
-.BI fileread()
-는 다음 버전 부터 없어진다. readfile을 사용하도록 한다.
 
 .SH 예제
 .nf
