@@ -2,17 +2,13 @@
 .\" Process with
 .\" nroff -man readfile.3
 .\" 2011-03-16 JoungKyun Kim <htt://oops.org>
-.\" $Id: readfile.3,v 1.2 2011-03-16 11:42:38 oops Exp $
+.\" $Id: readfile.3,v 1.3 2011-03-23 12:19:35 oops Exp $
 .SH NAME
 readfile \- Reads entire file into a string.
-.br
-fileread \- alias of readfile
 
 .SH SYNOPSIS
 .B #include <olibc/libfile.h>
 .sp
-.BI "char * fileread (const char * path);"
-.br
 .BI "char * readfile (const char * path);"
 
 .SH "Link library"
@@ -43,10 +39,6 @@ Read data or NULL on failure. When occurs internal error,
 returns null. If the return string array pointer is not null,
 the caller should deallocate this buffer using
 .BI free().
-
-The
-.BI fileread()
-api is deprecated on 0.1.3 and removed to next version.
 
 .SH EXAMPLE
 .nf
